<resources>
    <string name="app_name">PhoneBook</string>
    <string name="list_of_contacts">List of contacts</string>
    <string name="hint_contact_name">Enter contact name</string>
    <string name="hint_contact_number">Enter contact number</string>
    <string name="hint_contact_address">Enter contact adress</string>
    <string name="toolbar_add_new_contact">Add new contact</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_camera">Camera</string>
    <string name="add_contact">Add contact</string>
    <string name="save_contact">Save Contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="no_data_to_show">No data to show!</string>
    <string name="edit_text_error">You left empty field!</string>
    <string name="contact_picture_error">You haven\'t picked contact picture!</string>
    <string name="contact_info_error">Something went horribly wrong</string>
    <string name="show_contact_name">Contact name: %s</string>
    <string name="show_contact_number">Contact number: %s</string>
    <string name="show_contact_address">Contact address: %s</string>
    <string name="contact_info_dialog_message">Do you really want to delete this entry?</string>
    <string name="contact_info_dialog_positive">Yes</string>
    <string name="contact_info_dialog_negative">No</string>
    <string name="delete_contact_message">You successfully deleted contact</string>
    <string name="contact_number_lenght_error">Number has to be between 9 and 20 digits</string>
</resources>
